2022-10-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eoverlayspp, ee-overlay-pp0): new functions.

2022-10-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eregionpp): new function.
	(ee-string-intervals): new function.
	(ee-eregionpp-preprocess): new function.
	(find-eregionpp0): I renamed the old function `find-eregionpp' to
	`find-eregionpp0'.

2022-10-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-1stclassvideos-dlsubs): rewritten.

2022-10-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-telegachat-links)
	(ee-find-telegachat-links): new functions.

	* eev-hlinks.el (ee-telegachat-bufferp): new function.
	(ee-fhl-main-program): added an entry for telegachat.

	* eev-plinks.el (find-telegachat): new function.

2022-10-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022yttranscriptvideo): new function.
	(ee-1stclassvideos-info): added an entry for ""2022yttranscript".

2022-10-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-youtubedl-split): use `let*'.
	(find-yttranscript-links): added a shorter format.

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend):
	fixed a bug in the interactive.

2022-10-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eejump-links): new function.
	(find-importlib-links, find-pypi-links): new functions.

2022-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-shorterfname): new function.
	(ee-kl-sexp-kla, ee-kl-sexp-klas): use `ee-kl-shorterfname'.

2022-10-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-f90-mode): new function.

2022-10-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdftools-page, find-xpdf-page)
	(find-pdftoolsr-page): added an (interactive ...).
	(ee-code-pdftextbackend, ee-code-pdfbackend): same.
	(find-pdftools-page): use `revert-without-query'.

2022-09-25  Eduardo Ochs  <eduardoochs@gmail.com>
